--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
             <img class="avatar" src="images/danial.png">
             <div >
                 <h3>Danial Bashirzadeh</h3>
-                <p>Frontend Developer</p>
+                <p>Software Developer</p>
                 <h4>Birmingham, United Kingdom</h4>
             </div>
         </div>
